  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxAboutBox, wxTreebook, tar streams.


2.8.0
-----

All:

- wxArrayString::Alloc() now works as reserve() and doesn't clear array contents
- Fixed long standing bug in wxFileConfig groups renaming (Antti Koivisto).
- New option wxFS_READ | wxFS_SEEKABLE for wxFileSystem::OpenFile() to return
  a stream that is seekable.

wxMSW:

- Fixed version script problems when using configure with cygwin/mingw32.
- Use system default paper size for printing instead of A4.
- Fix colours when converting wxBitmap with alpha to wxImage (nusi).


2.7.2
-----

All:

- Added wxFFile overload to wxFileName::CreateTemporaryFileName().
- Added GetTempDir() to wxFileName and wxStandardPaths.
- Added wxTar streams.
- Added wxFilterFSHandler and wxArchiveFSHandler.
- Added wxString::ToLongLong() and ToULongLong().

All (GUI): 

- wxMemoryDC constructor now optionally accepts a wxBitmap parameter,
  calling SelectObject itself if a valid bitmap is passed.
- Reverted wxBuffered[Paint]DC to pre 2.7.1 state, added
  wxAutoBufferedPaintDC and wxAutoBufferedPaintDCFactory.
- Renamed wxProgressDialog::UpdatePulse() to just Pulse().
- Added wxCollapsiblePane (Francesco Montorsi).
- Added wxSimpleHtmlListBox (Francesco Montorsi).
- Printing framework fixes by Robert J. Lang. Bugs fixed,
  wxPrinterDC::GetPaperRect() and other functions added to allow
  easier printing implementation, and the documentation updated.
- Many enhancements to wxRichTextCtrl including URL support,
  formatting and symbol dialogs, print/preview, and better list
  formatting.
- Support for loading TGA files added (Seth Jackson).
- Added wxTB_RIGHT style for right-aligned toolbars (Igor Korot).
- wxHtmlWindow now generates events on link clicks (Francesco Montorsi).
- wxHtmlWindow now also generates wxEVT_COMMAND_TEXT_COPY event.

Unix Ports:

- Added autopackage for wxGTK and an example of using autopackage for a wx
  program (Francesco Montorsi).
